--- a/css/style.css
+++ b/css/style.css
@@ -105,8 +105,8 @@ input {
 
 @font-face {
     font-family: "Relay Cond Regular";
-    src: url("https://buyrightchannel.com/font/relay-cond-regular.eot");
-    src: url("https://buyrightchannel.com/font/relay-cond-regular.eot?") format("embedded-opentype"),url("../fonts/Relay-Regular.woff") format("woff"),url("https://buyrightchannel.com/font/relay-cond-regular.ttf") format("truetype"),url("https://buyrightchannel.com/font/relay-cond-regular.svg") format("svg");
+    src: url("../fonts/Relay-Regular.eot");
+    src: url("../fonts/Relay-Regular.eot") format("embedded-opentype"),url("../fonts/Relay-Regular.woff") format("woff"),url("../fonts/Relay-Regular.ttf") format("truetype"),url("../fonts/Relay-Regular.svg") format("svg");
     font-style: normal!important;
     font-weight: 400!important;
 }
